--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1532,7 +1532,11 @@
 /* CTA */
 
 	#cta {
-		padding: 2em 0 0.1em 0;
+		padding: 0.1em 0 0.1em 0;
+		text-align: center;
+        padding: 4em 4em 2em 4em;
+		background-color: #ffffff;
+		border-radius: 4px;
 		text-align: center;
 	}
 
