--- a/assets/css/carousel.css
+++ b/assets/css/carousel.css
@@ -5,7 +5,7 @@
   max-width: 1000px;
   position: relative;
   margin: auto;
-  padding-bottom: 65%;
+  padding-bottom: 58.25%;
   padding-top: 0px;
   overflow: auto;
 }
@@ -34,6 +34,8 @@
   font-size: 100px;
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
+    outline: 0;
+   border: 0; 
 }
 
 /* Position the "next button" to the right */
@@ -50,6 +52,8 @@
   transition: 0.6s ease;
   right: 0px;
   border-radius: 3px 0 0 3px;
+    outline: 0;
+   border: 0; 
 }
 
 /* On hover, add a black background color with a little bit see-through */
